Fix mobile spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -316,6 +316,12 @@ body {
 	padding-top: 60px;
 	padding-bottom: 60px;
 
+	@media (max-width: 1000px) {
+		.chelsea {
+			margin-top: 20px;
+		}
+	}
+
 	.team-layout {
 		position: relative;
 	}
@@ -330,6 +336,9 @@ body {
 		position: relative;
 		z-index: 1;
 		max-width: 400px;
+		@media (max-width: 1000px) {
+			max-width: 100%;
+		}
 	}
 
 	.team-member-image-outer:before {
